FINALLY got the code to be able to read the name.txt and password.txt file and access the computer like that